sql/src/test/resources/drill/window/queries/negative/no_over_clause-5.sql.drill-3280.fail
-- Should throw an error
select 
	--row_number(),
	rank() over (order by a1),
	dense_rank() over(order by a1)
from 
	t1
;
